--- a/tesla-server-zipkin-b/pom.xml
+++ b/tesla-server-zipkin-b/pom.xml
@@ -7,26 +7,30 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tesla-config-server</artifactId>
+    <artifactId>tesla-server-zipkin-b</artifactId>
     <packaging>jar</packaging>
 
-    <name>tesla-config-server</name>
+    <name>tesla-server-zipkin-b</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
-
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
