--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
         <module>tesla-server-zipkin-a</module>
         <module>tesla-server-zipkin-b</module>
         <module>tesla-service-docker</module>
-    </modules>
+		<module>tesla-service-mybatis</module>
+	</modules>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -44,9 +45,13 @@
 		<alibaba.fastjson.version>1.2.28</alibaba.fastjson.version>
 		<jodaTime.version>2.9.7</jodaTime.version>
 		<mybatis.version>3.4.4</mybatis.version>
+		<mybatis.spring.version>1.3.0</mybatis.spring.version>
+		<mybatis.mapper.version>3.3.8</mybatis.mapper.version>
+		<mybatis.pagehelper.version>4.1.1</mybatis.pagehelper.version>
 		<mysql.version>5.1.34</mysql.version>
 		<spring.boot.version>1.5.1.RELEASE</spring.boot.version>
 		<springfox.swagger2.version>2.6.1</springfox.swagger2.version>
+
 	</properties>
 
 
@@ -86,6 +91,31 @@
 			<artifactId>druid</artifactId>
 			<version>${alibaba.druid.version}</version>
 		</dependency>
+
+		<!-- Mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>${mybatis.spring.version}</version>
+		</dependency>
+		<!--mybatis 通用Mapper-->
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper</artifactId>
+			<version>${mybatis.mapper.version}</version>
+		</dependency>
+		<!-- mybatis 分页插件 -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>${mybatis.pagehelper.version}</version>
+		</dependency>
+
 
 		<!--serialization start-->
 		<dependency>
@@ -148,6 +178,9 @@
 			<version>${springfox.swagger2.version}</version>
 		</dependency>
 
+
+
+
 	</dependencies>
 
 	<build>
@@ -164,6 +197,30 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+					<configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
+					<overwrite>true</overwrite>
+					<verbose>true</verbose>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>${mysql.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>tk.mybatis</groupId>
+						<artifactId>mapper</artifactId>
+						<version>${mybatis.mapper.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
 		</plugins>
 	</build>
 
