--- a/tesla-config-client/src/main/resources/bootstrap.yml
+++ b/tesla-config-client/src/main/resources/bootstrap.yml
@@ -3,15 +3,15 @@ spring:
     name: tesla-config-client
   cloud:
     config:
-      # uri: http://localhost:8888/
+      uri: http://localhost:8888/
       profile: test
       label: master
       discovery:
         enabled: true   # 默认false，设为true表示使用注册中心中的configServer配置而不自己配置configServer的uri
         service-id: tesla-config-server # 指定config server在服务发现中的serviceId，默认为：configServer
-  rabbitmq:
-    addresses: localhost
-    port: 5672
+#  rabbitmq:
+#    addresses: localhost
+#    port: 5672
 
 eureka:
   client:
